service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loan-app
spec:
  selector:
    app: loan-app
  ports:
  - name: http
    port: 8080
    targetPort: 8080
