route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: loan-app
spec:
  to:
    kind: Service
    name: loan-app
  port:
    targetPort: http
